# talent-plan-rs

building-block-01/meow/: Cargo.toml
building-block-01/meow/src/: cli.yml  main.rs
building-block-02/: Cargo.toml
building-block-02/src/: main.rs
building-block-03/: Cargo.toml
building-block-03/src/: custom_de.rs  custom_ser.rs  custom_serde.rs  lib.rs
building-block-04/: Cargo.toml
building-block-04/src/: main.rs
dss/: Makefile  README.md
dss/raft/src/kvraft/: client.rs  server.rs
dss/raft/src/proto/: kvraft.proto  mod.rs  raft.proto
dss/raft/src/raft/: mod.rs  tests.rs
kvs/: Cargo.toml
kvs/benches/: benches.rs
kvs/src/: app.rs  lib.rs  thread_pool.rs
tinykv/kv/server/: server.go
tinykv/kv/storage/standalone_storage/: standalone_storage.go
