[package]
name = "building-block-02"
version = "0.1.0"
authors = ["liyiheng <liyihenggnehiyil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
ron = "0.5.1"
bson = "0.14.0"
