[package]
name = "kvs"
version = "0.1.0"
authors = ["liyiheng <liyihenggnehiyil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[[bench]]
name = "benches"
harness = false


[dependencies]
clap = "2.33.0"
structopt = "0.3.7"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
log = "0.4.8"
env_logger = "0.7.1"
sled = "0.31.0"
num_cpus = "1.12.0"
rayon = "1.3.0"
crossbeam-epoch = "0.8.0"
chashmap = "2.2.2"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
