[package]
name = "meow"
version = "0.1.0"
authors = ["liyiheng <liyihenggnehiyil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
dotenv_codegen = "0.15.0"
